Fix spacing between top of article and page header

--- a/wp-content/themes/largo-child/css/style.css
+++ b/wp-content/themes/largo-child/css/style.css
@@ -488,7 +488,9 @@ p.wp-caption-text {
 }
 #main {
   max-width: 1170px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
 }
 #ad-banner-container {
   background: #595953;
